Fix Logic StockTake Page and Crate StockTake